tests/snapshots/mutations__archive-the-last-queued-row.snap
---
source: tests/mutations.rs
description: "qctl archive DEMO-001 --evidence \"It shipped.\""
---
# -5 +7
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
-active: DEMO-001
+active: null
 
-queue:
+queue: []
+archive:
   - id: DEMO-001
     title: The only row
     scope: demo
     outcome: Something is true.
-    blocked_by: []
-    acceptance: [It holds.]
-archive: []
+    completed: [NOW]
+    evidence:
+      - It shipped.
+    disposition: completed
 horizon: []
