tests/snapshots/mutations__edit-a-queued-title.snap
---
source: tests/mutations.rs
description: "qctl edit DEMO-001 --title \"New title\""
---
# -1 +1
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 queue:
   - id: DEMO-001
-    title: Old title
+    title: New title
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
 archive: []
 horizon: []
