tests/snapshots/mutations__edit-appends-a-note.snap
---
source: tests/mutations.rs
description: "qctl edit DEMO-001 --note \"An addendum\""
---
# -0 +1
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 queue:
   - id: DEMO-001
     title: First
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
     notes:
       - Keep this.
+      - An addendum
 archive: []
 horizon: []
