tests/snapshots/mutations__edit-moves-a-row-before.snap
---
source: tests/mutations.rs
description: "qctl edit DEMO-003 --position before:DEMO-002"
---
# -6 +6
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 queue:
   - id: DEMO-001
     title: First
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
-  - id: DEMO-002
-    title: Second
+  - id: DEMO-003
+    title: Third
     scope: demo
-    outcome: Second outcome.
+    outcome: Third outcome.
     blocked_by: []
     acceptance:
       - It holds.
-  - id: DEMO-003
-    title: Third
+  - id: DEMO-002
+    title: Second
     scope: demo
-    outcome: Third outcome.
+    outcome: Second outcome.
     blocked_by: []
     acceptance:
       - It holds.
 archive: []
 horizon: []
