tests/snapshots/mutations__fmt-keeps-a-loose-comment-when-nothing-moves.snap
---
source: tests/mutations.rs
description: qctl fmt
---
# -0 +0
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: null
 queue: []
 
 # A note with blank lines around it, so it belongs to no list. Nothing here has
 # to move, so nothing has to place it.
 
 archive: []
 horizon: []
