tests/snapshots/mutations__fmt-moves-a-comment-with-its-list.snap
---
source: tests/mutations.rs
description: qctl fmt
---
# -1 +1
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 
 style:
   section_order: [queue, horizon, archive]
 
 active: null
 queue: []
 
+horizon: []
 # Everything below this line is history, not work.
 archive:
   - id: DEMO-001
     title: First
     scope: demo
     completed: 2026-08-16T23:08:28
     outcome: Something is true.
     evidence: [It shipped.]
     disposition: completed
-horizon: []
